tests/samples/negative/pattern_matching/structural_match_unreachable.ax
module structural_match_unreachable;

fn score(value: (bool, bool)) -> i32 {
    return match value {
        (true, _) => 1,
        (true, false) => 2,
        (false, _) => 3,
    };
}

fn main() -> i32 {
    return score((true, false));
}
